# texttoaudio

./: .cursorrules  .gitignore  README.md
.github/workflows/: backend-cd.yml  backend-ci.yml
backend/: .dockerignore  Dockerfile  README.md  conftest.py  pyproject.toml  requirements.txt  test_tts_service.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  tts.py
backend/app/middleware/: __init__.py  rate_limiter.py
backend/app/services/: tts_service.py
backend/tests/: test_main.py  test_rate_limiter.py  test_tts.py
backend/text_to_audio_backend.egg-info/: PKG-INFO  SOURCES.txt
docs/: API.md
frontend/: jest.config.js  package-lock.json  package.json
frontend/src/: App.tsx  index.css  setupTests.ts
frontend/src/components/: TextToSpeech.tsx
frontend/src/components/__tests__/: TextToSpeech.test.tsx
frontend/src/hooks/: useTextToSpeech.ts
frontend/src/services/: api.ts
